--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home_1981</title>
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
     <link href="./fonts/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
@@ -21,7 +21,7 @@
           <div class="welcome_back">
             <p>Welcome Back, <span> JohnDoe81</span></p>
           </div>
-          <input type="button" value="Client Sign-Out" class="red_button">
+          <input type="button" value="Client Sign-Out" class="button_red">
         </div>
       </div>
       <div class="slider">
@@ -157,12 +157,12 @@
                 <h1><span>Newsletter</span> Subscription</h1><br/>
                 <div class="sign_up black_back">
                   <input type="text" placeholder="kalupathor@dupka.com" class="sign_up_text">
-                  <input type="button" value="Sign-Up" class="red_button sign_up_button">
+                  <input type="button" value="Sign-Up" class="button_red sign_up_button">
                 </div><br/>
                 <ul>
                   <li class="black_back twitter">
                     <i class="fa fa-twitter fa-2x" aria-hidden="true"></i><br/>
-                    <input type="button" value="follow" class="red_button twitter_button">
+                    <input type="button" value="follow" class="button_red twitter_button">
                   </li>
                   <li class="black_back chat">
                     <p>RT @_1981_: Check out his awesome template on #themeforest
